--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.1",
     "bootstrap-vue": "^2.23.1",
+    "cors": "^2.8.5",
     "primevue": "^3.32.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13"
