--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-vue": "^2.23.1",
     "cors": "^2.8.5",
+    "primeflex": "^3.3.1",
     "primevue": "^3.32.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13"
