--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.1",
     "bootstrap-vue": "^2.23.1",
